Switched Graph Representation to ArrayList of an ArrayList